# NN

./: CMakeLists.txt  CNN.cpp  CNN.h  Maths.h  Model.cpp  Model.h  Neuron.h  Objects.cpp  Objects.h  main.cpp
include/: ImageLoading.h  VNN.h
src/: CMakeLists.txt  ImageLoading.cpp  VNN.cpp  backprop.cpp  forwardProp.cpp
